framework/build.gcc/tmp/du3456g.output
Nonterminals useless in grammar

    integer_constant_identifier
    ordinal_identifier


Terminals unused in grammar

    ARRAY
    OF
    LPAR
    RPAR
    DOTDOT


Rules useless in grammar

  123 integer_constant_identifier: IDENTIFIER

  124 ordinal_identifier: pm_opt integer_constant_identifier
  125                   | pm_opt UINT


Rules useless in parser due to conflicts

   41 ordinal_type_identifier: IDENTIFIER

   96 statement_next: %empty


State 26 conflicts: 8 shift/reduce
State 41 conflicts: 8 shift/reduce
State 45 conflicts: 8 shift/reduce
State 47 conflicts: 1 reduce/reduce
State 54 conflicts: 8 shift/reduce, 2 reduce/reduce
State 84 conflicts: 1 shift/reduce
State 88 conflicts: 8 shift/reduce, 2 reduce/reduce
State 108 conflicts: 1 shift/reduce
State 113 conflicts: 46 reduce/reduce
State 120 conflicts: 8 shift/reduce
State 124 conflicts: 8 shift/reduce
State 127 conflicts: 1 reduce/reduce
State 147 conflicts: 4 reduce/reduce
State 155 conflicts: 1 shift/reduce
State 177 conflicts: 1 shift/reduce
State 197 conflicts: 8 shift/reduce
State 221 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce
State 228 conflicts: 8 shift/reduce
State 236 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce


Grammar

    0 $accept: mlaskal "end of file"

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON block_p DOT

    2 block_common: block_p1_opt block_p2_opt block_p3_opt block_p4_opt

    3 body: BEGIN statement_list_1 END

    4 block_p: block_common block_p5_opt body

    5 block: block_common body

    6 block_p1_opt: %empty
    7             | LABEL uint_list_1 SEMICOLON

    8 block_p2_opt: %empty
    9             | CONST block_p2_list

   10 block_p2_list: IDENTIFIER EQ constant SEMICOLON block_p2_next

   11 block_p2_next: %empty
   12              | IDENTIFIER EQ constant SEMICOLON block_p2_next

   13 block_p3_opt: %empty
   14             | TYPE block_p3_list

   15 block_p3_list: IDENTIFIER EQ type SEMICOLON block_p3_next

   16 block_p3_next: %empty
   17              | IDENTIFIER EQ type SEMICOLON block_p3_next

   18 block_p4_opt: %empty
   19             | VAR block_p4_list

   20 block_p4_list: identifier_list_1 COLON type SEMICOLON block_p4_next

   21 block_p4_next: %empty
   22              | identifier_list_1 COLON type SEMICOLON block_p4_next

   23 block_p5_opt: %empty
   24             | block_p5_list

   25 block_p5_list: procedure_header SEMICOLON block SEMICOLON block_p5_next
   26              | function_header SEMICOLON block SEMICOLON block_p5_next

   27 block_p5_next: %empty
   28              | procedure_header SEMICOLON block SEMICOLON block_p5_next
   29              | function_header SEMICOLON block SEMICOLON block_p5_next

   30 uint_list_1: UINT uint_next

   31 uint_next: %empty
   32          | COMMA UINT uint_next

   33 constant_identifier: IDENTIFIER

   34 function_identifier: IDENTIFIER

   35 variable_identifier: IDENTIFIER

   36 field_identifier: IDENTIFIER

   37 procedure_identifier: IDENTIFIER

   38 ordinal_type_variable_identifier: IDENTIFIER

   39 structured_type_identifier: IDENTIFIER

   40 type_identifier: IDENTIFIER

   41 ordinal_type_identifier: IDENTIFIER

   42 scalar_type_identifier: IDENTIFIER

   43 constant: unsigned_constant
   44         | OPER_SIGNADD UINT
   45         | OPER_SIGNADD REAL

   46 unsigned_constant: constant_identifier
   47                  | UINT
   48                  | REAL
   49                  | "'" STRING "'"

   50 pm_opt: %empty
   51       | OPER_SIGNADD

   52 boolean_expression: expression

   53 ordinal_expression: expression

   54 expression_cmp: EQ
   55               | OPER_REL

   56 expression: simple_expression
   57           | simple_expression expression_cmp simple_expression

   58 simple_expression: pm_opt term simple_expression_next

   59 simple_expression_bin_op: OPER_SIGNADD
   60                         | OR

   61 simple_expression_next: %empty
   62                       | simple_expression_bin_op term simple_expression_next

   63 term: factor term_next

   64 term_bin_op: "*"
   65            | "/"
   66            | OPER_MUL

   67 term_next: %empty
   68          | term_bin_op factor term_next

   69 factor: unsigned_constant
   70       | variable
   71       | function_identifier factor_parameters_opt
   72       | LSBRA expression RSBRA
   73       | NOT factor

   74 factor_parameters_opt: %empty
   75                      | LSBRA real_parameters RSBRA

   76 real_parameters: expression real_parameters_next
   77                | variable real_parameters_next

   78 real_parameters_next: %empty
   79                     | COMMA expression real_parameters_next
   80                     | COMMA variable real_parameters_next

   81 variable: variable_identifier
   82         | record_variable DOT field_identifier

   83 record_variable: variable

   84 statement: %empty
   85          | UINT COLON stmt_1
   86          | stmt_1
   87          | procedure_identifier factor_parameters_opt
   88          | GOTO UINT
   89          | BEGIN statement_list_1 END
   90          | IF boolean_expression THEN statement ELSE statement
   91          | IF boolean_expression THEN statement
   92          | WHILE boolean_expression DO statement
   93          | REPEAT statement_list_1 UNTIL boolean_expression
   94          | FOR ordinal_type_variable_identifier ASSIGN ordinal_expression FOR_DIRECTION ordinal_expression DO statement

   95 statement_list_1: statement statement_next

   96 statement_next: %empty
   97               | statement statement_next

   98 stmt_1: variable ASSIGN expression
   99       | function_identifier ASSIGN expression

  100 identifier_list_1: IDENTIFIER identifier_next

  101 identifier_next: %empty
  102                | COMMA IDENTIFIER identifier_next

  103 field_list: identifier_list_1 COLON type field_list_next

  104 field_list_next: %empty
  105                | SEMICOLON identifier_list_1 COLON type field_list_next

  106 structured_type: structured_type_identifier
  107                | structured_type_3

  108 structured_type_3: RECORD field_list SEMICOLON END
  109                  | RECORD field_list END
  110                  | RECORD END

  111 type: ordinal_type_identifier
  112     | type_identifier
  113     | structured_type

  114 procedure_header: PROCEDURE IDENTIFIER method_parameters_opt

  115 function_header: FUNCTION IDENTIFIER method_parameters_opt COLON scalar_type_identifier

  116 method_parameters: VAR identifier_list_1 COLON type_identifier method_parameters_next
  117                  | identifier_list_1 COLON type_identifier method_parameters_next

  118 method_parameters_next: %empty
  119                       | SEMICOLON VAR identifier_list_1 COLON type_identifier method_parameters_next
  120                       | SEMICOLON identifier_list_1 COLON type_identifier method_parameters_next

  121 method_parameters_opt: %empty
  122                      | method_parameters


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    PROGRAM (258) 1
    LABEL (259) 7
    CONST (260) 9
    TYPE (261) 14
    VAR (262) 19 116 119
    BEGIN (263) 3 89
    END (264) 3 89 108 109 110
    PROCEDURE (265) 114
    FUNCTION (266) 115
    ARRAY (267)
    OF (268)
    GOTO (269) 88
    IF (270) 90 91
    THEN (271) 90 91
    ELSE (272) 90
    WHILE (273) 92
    DO (274) 92 94
    REPEAT (275) 93
    UNTIL (276) 93
    FOR (277) 94
    OR (278) 60
    NOT (279) 73
    RECORD (280) 108 109 110
    IDENTIFIER <mlc::ls_id_index> (281) 1 10 12 15 17 33 34 35 36 37 38 39 40 41 42 100 102 114 115
    UINT <mlc::ls_int_index> (282) 30 32 44 47 85 88
    REAL <mlc::ls_real_index> (283) 45 48
    STRING <mlc::ls_str_index> (284) 49
    SEMICOLON (285) 1 7 10 12 15 17 20 22 25 26 28 29 105 108 119 120
    DOT (286) 1 82
    COMMA (287) 32 79 80 102
    EQ (288) 10 12 15 17 54
    COLON (289) 20 22 85 103 105 115 116 117 119 120
    LPAR (290)
    RPAR (291)
    DOTDOT (292)
    LSBRA (293) 72 75
    RSBRA (294) 72 75
    ASSIGN (295) 94 98 99
    OPER_REL <mlc::DUTOKGE_OPER_REL> (296) 55
    OPER_SIGNADD <mlc::DUTOKGE_OPER_SIGNADD> (297) 44 45 51 59
    OPER_MUL <mlc::DUTOKGE_OPER_MUL> (298) 66
    FOR_DIRECTION <mlc::DUTOKGE_FOR_DIRECTION> (299) 94
    "'" (300) 49
    "*" (301) 64
    "/" (302) 65


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    mlaskal (49)
        on left: 1
        on right: 0
    block_common (50)
        on left: 2
        on right: 4 5
    body (51)
        on left: 3
        on right: 4 5
    block_p (52)
        on left: 4
        on right: 1
    block (53)
        on left: 5
        on right: 25 26 28 29
    block_p1_opt (54)
        on left: 6 7
        on right: 2
    block_p2_opt (55)
        on left: 8 9
        on right: 2
    block_p2_list (56)
        on left: 10
        on right: 9
    block_p2_next (57)
        on left: 11 12
        on right: 10 12
    block_p3_opt (58)
        on left: 13 14
        on right: 2
    block_p3_list (59)
        on left: 15
        on right: 14
    block_p3_next (60)
        on left: 16 17
        on right: 15 17
    block_p4_opt (61)
        on left: 18 19
        on right: 2
    block_p4_list (62)
        on left: 20
        on right: 19
    block_p4_next (63)
        on left: 21 22
        on right: 20 22
    block_p5_opt (64)
        on left: 23 24
        on right: 4
    block_p5_list (65)
        on left: 25 26
        on right: 24
    block_p5_next (66)
        on left: 27 28 29
        on right: 25 26 28 29
    uint_list_1 (67)
        on left: 30
        on right: 7
    uint_next (68)
        on left: 31 32
        on right: 30 32
    constant_identifier (69)
        on left: 33
        on right: 46
    function_identifier (70)
        on left: 34
        on right: 71 99
    variable_identifier (71)
        on left: 35
        on right: 81
    field_identifier (72)
        on left: 36
        on right: 82
    procedure_identifier (73)
        on left: 37
        on right: 87
    ordinal_type_variable_identifier (74)
        on left: 38
        on right: 94
    structured_type_identifier (75)
        on left: 39
        on right: 106
    type_identifier (76)
        on left: 40
        on right: 112 116 117 119 120
    ordinal_type_identifier (77)
        on left: 41
        on right: 111
    scalar_type_identifier (78)
        on left: 42
        on right: 115
    constant (79)
        on left: 43 44 45
        on right: 10 12
    unsigned_constant (80)
        on left: 46 47 48 49
        on right: 43 69
    pm_opt (81)
        on left: 50 51
        on right: 58
    boolean_expression (82)
        on left: 52
        on right: 90 91 92 93
    ordinal_expression (83)
        on left: 53
        on right: 94
    expression_cmp (84)
        on left: 54 55
        on right: 57
    expression (85)
        on left: 56 57
        on right: 52 53 72 76 79 98 99
    simple_expression (86)
        on left: 58
        on right: 56 57
    simple_expression_bin_op (87)
        on left: 59 60
        on right: 62
    simple_expression_next (88)
        on left: 61 62
        on right: 58 62
    term (89)
        on left: 63
        on right: 58 62
    term_bin_op (90)
        on left: 64 65 66
        on right: 68
    term_next (91)
        on left: 67 68
        on right: 63 68
    factor (92)
        on left: 69 70 71 72 73
        on right: 63 68 73
    factor_parameters_opt (93)
        on left: 74 75
        on right: 71 87
    real_parameters (94)
        on left: 76 77
        on right: 75
    real_parameters_next (95)
        on left: 78 79 80
        on right: 76 77 79 80
    variable (96)
        on left: 81 82
        on right: 70 77 80 83 98
    record_variable (97)
        on left: 83
        on right: 82
    statement (98)
        on left: 84 85 86 87 88 89 90 91 92 93 94
        on right: 90 91 92 94 95 97
    statement_list_1 (99)
        on left: 95
        on right: 3 89 93
    statement_next (100)
        on left: 96 97
        on right: 95 97
    stmt_1 (101)
        on left: 98 99
        on right: 85 86
    identifier_list_1 (102)
        on left: 100
        on right: 20 22 103 105 116 117 119 120
    identifier_next (103)
        on left: 101 102
        on right: 100 102
    field_list (104)
        on left: 103
        on right: 108 109
    field_list_next (105)
        on left: 104 105
        on right: 103 105
    structured_type (106)
        on left: 106 107
        on right: 113
    structured_type_3 (107)
        on left: 108 109 110
        on right: 107
    type (108)
        on left: 111 112 113
        on right: 15 17 20 22 103 105
    procedure_header (109)
        on left: 114
        on right: 25 28
    function_header (110)
        on left: 115
        on right: 26 29
    method_parameters (111)
        on left: 116 117
        on right: 122
    method_parameters_next (112)
        on left: 118 119 120
        on right: 116 117 119 120
    method_parameters_opt (113)
        on left: 121 122
        on right: 114 115


State 0

    0 $accept: . mlaskal "end of file"

    PROGRAM  shift, and go to state 1

    mlaskal  go to state 2


State 1

    1 mlaskal: PROGRAM . IDENTIFIER SEMICOLON block_p DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: mlaskal . "end of file"

    "end of file"  shift, and go to state 4


State 3

    1 mlaskal: PROGRAM IDENTIFIER . SEMICOLON block_p DOT

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: mlaskal "end of file" .

    $default  accept


State 5

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON . block_p DOT

    LABEL  shift, and go to state 6

    $default  reduce using rule 6 (block_p1_opt)

    block_common  go to state 7
    block_p       go to state 8
    block_p1_opt  go to state 9


State 6

    7 block_p1_opt: LABEL . uint_list_1 SEMICOLON

    UINT  shift, and go to state 10

    uint_list_1  go to state 11


State 7

    4 block_p: block_common . block_p5_opt body

    PROCEDURE  shift, and go to state 12
    FUNCTION   shift, and go to state 13

    $default  reduce using rule 23 (block_p5_opt)

    block_p5_opt      go to state 14
    block_p5_list     go to state 15
    procedure_header  go to state 16
    function_header   go to state 17


State 8

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON block_p . DOT

    DOT  shift, and go to state 18


State 9

    2 block_common: block_p1_opt . block_p2_opt block_p3_opt block_p4_opt

    CONST  shift, and go to state 19

    $default  reduce using rule 8 (block_p2_opt)

    block_p2_opt  go to state 20


State 10

   30 uint_list_1: UINT . uint_next

    COMMA  shift, and go to state 21

    $default  reduce using rule 31 (uint_next)

    uint_next  go to state 22


State 11

    7 block_p1_opt: LABEL uint_list_1 . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 12

  114 procedure_header: PROCEDURE . IDENTIFIER method_parameters_opt

    IDENTIFIER  shift, and go to state 24


State 13

  115 function_header: FUNCTION . IDENTIFIER method_parameters_opt COLON scalar_type_identifier

    IDENTIFIER  shift, and go to state 25


State 14

    4 block_p: block_common block_p5_opt . body

    BEGIN  shift, and go to state 26

    body  go to state 27


State 15

   24 block_p5_opt: block_p5_list .

    $default  reduce using rule 24 (block_p5_opt)


State 16

   25 block_p5_list: procedure_header . SEMICOLON block SEMICOLON block_p5_next

    SEMICOLON  shift, and go to state 28


State 17

   26 block_p5_list: function_header . SEMICOLON block SEMICOLON block_p5_next

    SEMICOLON  shift, and go to state 29


State 18

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON block_p DOT .

    $default  reduce using rule 1 (mlaskal)


State 19

    9 block_p2_opt: CONST . block_p2_list

    IDENTIFIER  shift, and go to state 30

    block_p2_list  go to state 31


State 20

    2 block_common: block_p1_opt block_p2_opt . block_p3_opt block_p4_opt

    TYPE  shift, and go to state 32

    $default  reduce using rule 13 (block_p3_opt)

    block_p3_opt  go to state 33


State 21

   32 uint_next: COMMA . UINT uint_next

    UINT  shift, and go to state 34


State 22

   30 uint_list_1: UINT uint_next .

    $default  reduce using rule 30 (uint_list_1)


State 23

    7 block_p1_opt: LABEL uint_list_1 SEMICOLON .

    $default  reduce using rule 7 (block_p1_opt)


State 24

  114 procedure_header: PROCEDURE IDENTIFIER . method_parameters_opt

    VAR         shift, and go to state 35
    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 121 (method_parameters_opt)

    identifier_list_1      go to state 37
    method_parameters      go to state 38
    method_parameters_opt  go to state 39


State 25

  115 function_header: FUNCTION IDENTIFIER . method_parameters_opt COLON scalar_type_identifier

    VAR         shift, and go to state 35
    IDENTIFIER  shift, and go to state 36

    $default  reduce using rule 121 (method_parameters_opt)

    identifier_list_1      go to state 37
    method_parameters      go to state 38
    method_parameters_opt  go to state 40


State 26

    3 body: BEGIN . statement_list_1 END

    BEGIN       shift, and go to state 41
    GOTO        shift, and go to state 42
    IF          shift, and go to state 43
    WHILE       shift, and go to state 44
    REPEAT      shift, and go to state 45
    FOR         shift, and go to state 46
    IDENTIFIER  shift, and go to state 47
    UINT        shift, and go to state 48

    BEGIN       [reduce using rule 84 (statement)]
    GOTO        [reduce using rule 84 (statement)]
    IF          [reduce using rule 84 (statement)]
    WHILE       [reduce using rule 84 (statement)]
    REPEAT      [reduce using rule 84 (statement)]
    FOR         [reduce using rule 84 (statement)]
    IDENTIFIER  [reduce using rule 84 (statement)]
    UINT        [reduce using rule 84 (statement)]
    $default    reduce using rule 84 (statement)

    function_identifier   go to state 49
    variable_identifier   go to state 50
    procedure_identifier  go to state 51
    variable              go to state 52
    record_variable       go to state 53
    statement             go to state 54
    statement_list_1      go to state 55
    stmt_1                go to state 56


State 27

    4 block_p: block_common block_p5_opt body .

    $default  reduce using rule 4 (block_p)


State 28

   25 block_p5_list: procedure_header SEMICOLON . block SEMICOLON block_p5_next

    LABEL  shift, and go to state 6

    $default  reduce using rule 6 (block_p1_opt)

    block_common  go to state 57
    block         go to state 58
    block_p1_opt  go to state 9


State 29

   26 block_p5_list: function_header SEMICOLON . block SEMICOLON block_p5_next

    LABEL  shift, and go to state 6

    $default  reduce using rule 6 (block_p1_opt)

    block_common  go to state 57
    block         go to state 59
    block_p1_opt  go to state 9


State 30

   10 block_p2_list: IDENTIFIER . EQ constant SEMICOLON block_p2_next

    EQ  shift, and go to state 60


State 31

    9 block_p2_opt: CONST block_p2_list .

    $default  reduce using rule 9 (block_p2_opt)


State 32

   14 block_p3_opt: TYPE . block_p3_list

    IDENTIFIER  shift, and go to state 61

    block_p3_list  go to state 62


State 33

    2 block_common: block_p1_opt block_p2_opt block_p3_opt . block_p4_opt

    VAR  shift, and go to state 63

    $default  reduce using rule 18 (block_p4_opt)

    block_p4_opt  go to state 64


State 34

   32 uint_next: COMMA UINT . uint_next

    COMMA  shift, and go to state 21

    $default  reduce using rule 31 (uint_next)

    uint_next  go to state 65


State 35

  116 method_parameters: VAR . identifier_list_1 COLON type_identifier method_parameters_next

    IDENTIFIER  shift, and go to state 36

    identifier_list_1  go to state 66


State 36

  100 identifier_list_1: IDENTIFIER . identifier_next

    COMMA  shift, and go to state 67

    $default  reduce using rule 101 (identifier_next)

    identifier_next  go to state 68


State 37

  117 method_parameters: identifier_list_1 . COLON type_identifier method_parameters_next

    COLON  shift, and go to state 69


State 38

  122 method_parameters_opt: method_parameters .

    $default  reduce using rule 122 (method_parameters_opt)


State 39

  114 procedure_header: PROCEDURE IDENTIFIER method_parameters_opt .

    $default  reduce using rule 114 (procedure_header)


State 40

  115 function_header: FUNCTION IDENTIFIER method_parameters_opt . COLON scalar_type_identifier

    COLON  shift, and go to state 70


State 41

   89 statement: BEGIN . statement_list_1 END

    BEGIN       shift, and go to state 41
    GOTO        shift, and go to state 42
    IF          shift, and go to state 43
    WHILE       shift, and go to state 44
    REPEAT      shift, and go to state 45
    FOR         shift, and go to state 46
    IDENTIFIER  shift, and go to state 47
    UINT        shift, and go to state 48

    BEGIN       [reduce using rule 84 (statement)]
    GOTO        [reduce using rule 84 (statement)]
    IF          [reduce using rule 84 (statement)]
    WHILE       [reduce using rule 84 (statement)]
    REPEAT      [reduce using rule 84 (statement)]
    FOR         [reduce using rule 84 (statement)]
    IDENTIFIER  [reduce using rule 84 (statement)]
    UINT        [reduce using rule 84 (statement)]
    $default    reduce using rule 84 (statement)

    function_identifier   go to state 49
    variable_identifier   go to state 50
    procedure_identifier  go to state 51
    variable              go to state 52
    record_variable       go to state 53
    statement             go to state 54
    statement_list_1      go to state 71
    stmt_1                go to state 56


State 42

   88 statement: GOTO . UINT

    UINT  shift, and go to state 72


State 43

   90 statement: IF . boolean_expression THEN statement ELSE statement
   91          | IF . boolean_expression THEN statement

    OPER_SIGNADD  shift, and go to state 73

    $default  reduce using rule 50 (pm_opt)

    pm_opt              go to state 74
    boolean_expression  go to state 75
    expression          go to state 76
    simple_expression   go to state 77


State 44

   92 statement: WHILE . boolean_expression DO statement

    OPER_SIGNADD  shift, and go to state 73

    $default  reduce using rule 50 (pm_opt)

    pm_opt              go to state 74
    boolean_expression  go to state 78
    expression          go to state 76
    simple_expression   go to state 77


State 45

   93 statement: REPEAT . statement_list_1 UNTIL boolean_expression

    BEGIN       shift, and go to state 41
    GOTO        shift, and go to state 42
    IF          shift, and go to state 43
    WHILE       shift, and go to state 44
    REPEAT      shift, and go to state 45
    FOR         shift, and go to state 46
    IDENTIFIER  shift, and go to state 47
    UINT        shift, and go to state 48

    BEGIN       [reduce using rule 84 (statement)]
    GOTO        [reduce using rule 84 (statement)]
    IF          [reduce using rule 84 (statement)]
    WHILE       [reduce using rule 84 (statement)]
    REPEAT      [reduce using rule 84 (statement)]
    FOR         [reduce using rule 84 (statement)]
    IDENTIFIER  [reduce using rule 84 (statement)]
    UINT        [reduce using rule 84 (statement)]
    $default    reduce using rule 84 (statement)

    function_identifier   go to state 49
    variable_identifier   go to state 50
    procedure_identifier  go to state 51
    variable              go to state 52
    record_variable       go to state 53
    statement             go to state 54
    statement_list_1      go to state 79
    stmt_1                go to state 56


State 46

   94 statement: FOR . ordinal_type_variable_identifier ASSIGN ordinal_expression FOR_DIRECTION ordinal_expression DO statement

    IDENTIFIER  shift, and go to state 80

    ordinal_type_variable_identifier  go to state 81


State 47

   34 function_identifier: IDENTIFIER .
   35 variable_identifier: IDENTIFIER .
   37 procedure_identifier: IDENTIFIER .

    DOT       reduce using rule 35 (variable_identifier)
    ASSIGN    reduce using rule 34 (function_identifier)
    ASSIGN    [reduce using rule 35 (variable_identifier)]
    $default  reduce using rule 37 (procedure_identifier)


State 48

   85 statement: UINT . COLON stmt_1

    COLON  shift, and go to state 82


State 49

   99 stmt_1: function_identifier . ASSIGN expression

    ASSIGN  shift, and go to state 83


State 50

   81 variable: variable_identifier .

    $default  reduce using rule 81 (variable)


State 51

   87 statement: procedure_identifier . factor_parameters_opt

    LSBRA  shift, and go to state 84

    $default  reduce using rule 74 (factor_parameters_opt)

    factor_parameters_opt  go to state 85


State 52

   83 record_variable: variable .
   98 stmt_1: variable . ASSIGN expression

    ASSIGN  shift, and go to state 86

    $default  reduce using rule 83 (record_variable)


State 53

   82 variable: record_variable . DOT field_identifier

    DOT  shift, and go to state 87


State 54

   95 statement_list_1: statement . statement_next

    BEGIN       shift, and go to state 41
    GOTO        shift, and go to state 42
    IF          shift, and go to state 43
    WHILE       shift, and go to state 44
    REPEAT      shift, and go to state 45
    FOR         shift, and go to state 46
    IDENTIFIER  shift, and go to state 47
    UINT        shift, and go to state 48

    BEGIN       [reduce using rule 84 (statement)]
    END         reduce using rule 84 (statement)
    END         [reduce using rule 96 (statement_next)]
    GOTO        [reduce using rule 84 (statement)]
    IF          [reduce using rule 84 (statement)]
    WHILE       [reduce using rule 84 (statement)]
    REPEAT      [reduce using rule 84 (statement)]
    UNTIL       reduce using rule 84 (statement)
    UNTIL       [reduce using rule 96 (statement_next)]
    FOR         [reduce using rule 84 (statement)]
    IDENTIFIER  [reduce using rule 84 (statement)]
    UINT        [reduce using rule 84 (statement)]
    $default    reduce using rule 84 (statement)
